--- a/오픈소스_데이터_분석_2강.ipynb
+++ b/오픈소스_데이터_분석_2강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_2%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_2%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,47 +32,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "2Y2HEiaiRwAI"
+        "id": "2Y2HEiaiRwAI",
+        "outputId": "1f8e4618-1fb2-4047-fe0a-f60c43de85a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30, 40]\n",
+            "[50, 60, 70]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
         "# 첫 4개의 원소 출력\n",
-        "\n",
+        "first_four = numbers[0:4]\n",
         "print(first_four)\n",
         "# 뒤 3개의 원소를 출력\n",
-        "\n",
+        "last_three = numbers[-3:7] # == numbers[-3:]\n",
         "print(last_three)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "IO8bsKekR0W_"
+        "id": "IO8bsKekR0W_",
+        "outputId": "82db5459-1b47-4dcb-fb25-157637a800b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 30, 50, 70]\n",
+            "[70, 60, 50, 40, 30, 20, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
         "\n",
         "# 홀수번째 항목 출력\n",
-        "\n",
+        "every_other_list = numbers[::2]\n",
         "print(every_other_list)\n",
         "\n",
         "# 역순 출력\n",
-        "\n",
+        "reverse_list = numbers[::-1]\n",
         "print(reverse_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "60qOf7uxVdAg"
+        "id": "60qOf7uxVdAg",
+        "outputId": "1865db17-b020-427b-fcbc-98e8d44f394f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3, 4], [5, 6, 7, 8]]\n",
+            "[[1, 2], [5, 6], [9, 10], [13, 14]]\n"
+          ]
+        }
+      ],
       "source": [
         "matrix = [\n",
         "    [1, 2, 3, 4],\n",
@@ -82,12 +121,12 @@
         "]\n",
         "\n",
         "# 첫 두 행 출력\n",
-        "\n",
+        "first_two_rows = matrix[:2]\n",
         "\n",
         "print(first_two_rows)\n",
         "\n",
         "# 첫 두 열 출력\n",
-        "\n",
+        "first_two_columns = [row[:2] for row in matrix]\n",
         "\n",
         "print(first_two_columns)"
       ]
@@ -103,28 +142,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "JpmgdsW9V0CY"
+        "id": "JpmgdsW9V0CY",
+        "outputId": "42645770-c9b2-448a-e934-756288bf52c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [ ]\n",
         "\n",
         "# 1 ~ 5 포함 리스트 생성\n",
-        "for i in range(5):\n",
+        "for i in range(1,6):\n",
         "    numbers.append(i)\n",
-        "\n",
+        "#numbser = [num for num in range(1,6)]\n",
         "print(numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "cRC8x3_iW0im"
+        "id": "cRC8x3_iW0im",
+        "outputId": "b0d2e4f5-adc1-48ca-a3a3-a4256d0de0d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [1, 2, 3, 4, 5]\n",
         "squares = [ ]\n",
@@ -132,17 +195,29 @@
         "# numbers의 모든 항목의 값을 제곱한 리스트\n",
         "for num in numbers:\n",
         "  squares.append(num ** 2)\n",
-        "\n",
+        "#squares = [num ** 2 for num in numbers]\n",
         "print(squares)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "MAvimjk6Fqlc"
+        "id": "MAvimjk6Fqlc",
+        "outputId": "9a9e12a3-e20a-46cb-c110-4ce69de03c45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
         "even_numbers = [ ]\n",
@@ -151,17 +226,29 @@
         "for num in numbers:\n",
         "    if num % 2 == 0:\n",
         "        even_numbers.append(num)\n",
-        "\n",
+        "#even_numbers = [num for num in numbers if num % 2 == 0]\n",
         "print(even_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "HGO8XTxBFqld"
+        "id": "HGO8XTxBFqld",
+        "outputId": "1daa6727-dcd3-4a6e-c9a0-951944563d52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('사과', '주스'), ('사과', '잼'), ('사과', '통조림'), ('복숭아', '주스'), ('복숭아', '잼'), ('복숭아', '통조림'), ('바나나', '주스'), ('바나나', '잼'), ('바나나', '통조림')]\n"
+          ]
+        }
+      ],
       "source": [
         "list1 = ['사과', '복숭아', '바나나']\n",
         "list2 = ['주스', '잼', '통조림']\n",
@@ -171,34 +258,59 @@
         "for fruit in list1:\n",
         "    for product in list2:\n",
         "        pairs.append((fruit, product))\n",
-        "\n",
+        "#pairs = [(fruit, product) for fruit in list1 for product in list2]\n",
         "print(pairs)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "K-BPhFTUFqle"
+        "id": "K-BPhFTUFqle",
+        "outputId": "7d449541-73b3-4654-f520-dc6c6e5813b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n"
+          ]
+        }
+      ],
       "source": [
         "squares = { }\n",
         "\n",
         "# 딕셔너리 생성\n",
         "for i in range(5):\n",
         "    squares[i] = i ** 2\n",
-        "\n",
+        "#squares = {i:i**2 for i in range(5)}\n",
         "print(squares)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "UoTcC8-GFqlf"
+        "id": "UoTcC8-GFqlf",
+        "outputId": "ffcdb090-fa7c-4760-f2e4-e2295a2930d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'서울': 957, '부산': 339, '인천': 294, '대구': 242}\n",
+            "{'부산': 339}\n"
+          ]
+        }
+      ],
       "source": [
         "city_population = {\n",
         "    '서울': 957, '부산': 339, '인천': 294, '대구': 242, '광주': 145, '대전': 147,\n",
@@ -206,11 +318,11 @@
         "}\n",
         "\n",
         "# 인구 200만명 이상의 도시 리스트\n",
-        "\n",
+        "large_cities = {city : pop for city, pop in city_population.items() if pop >= 200}\n",
         "print(large_cities)\n",
         "\n",
         "# 인구 300만 이상 및 이름에 '산'이 포함된 도시 리스트\n",
-        "\n",
+        "large_short_name_cities = {city : pop for city, pop in city_population.items() if pop >= 300 and '산' in city}\n",
         "print(large_short_name_cities)"
       ]
     },
@@ -225,11 +337,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "fzO0h6KfFqlg"
+        "id": "fzO0h6KfFqlg",
+        "outputId": "fff027ec-75f5-488a-d67a-0b1618780541",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3500000원\n",
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3500000원, 세후 월급 = 350000원\n",
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3500000원, 세금 = 0.1, 세후 월급 = 350000원\n"
+          ]
+        }
+      ],
       "source": [
         "name = '홍길동'\n",
         "age = 30\n",
@@ -238,12 +364,13 @@
         "\n",
         "# C 스타일 문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
+        "basic_format = '이름 = %s, 나이 = %d살,  월급 = %d원' % (name, age, salary)\n",
         "\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
-        "\n",
+        "index_format = '이름 = %s, 나이 = %d살,  월급 = %d원, 세후 월급 = %d원' % (name, age, salary, salary*tax_rate)\n",
         "\n",
         "# 직원이름, 나이, 월급, 세금, 실수령액 추력\n",
-        "\n",
+        "keyword_format = '이름 = %s, 나이 = %d살,  월급 = %d원, 세금 = %.1f, 세후 월급 = %d원' % (name, age, salary, tax_rate, salary*tax_rate)\n",
         "\n",
         "print(basic_format)\n",
         "print(index_format)\n",
@@ -260,21 +387,38 @@
         "\n",
         "# str.format 문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
+        "basic_format = '이름 = {0}, 나이 = {1}살,  월급 = {2:,}원'.format(name, age, salary)\n",
         "\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
+        "#index_format = '이름 = {}, 나이 = {}살,  월급 = {}원'.format(name, age, salary)\n",
+        "index_format = '이름 = {0}, 나이 = {1}살,  월급 = {2:,}원, 세후 월급 = {3:,}'.format(name, age, salary, (int)(salary*tax_rate))\n",
         "\n",
         "# 직원이름, 나이, 월급, 세금, 실수령액 추력\n",
-        "\n",
+        "keyword_format = '이름 = {0}, 나이 = {1}살,  월급 = {2:,}원, 세금 = {3}, 세후 월급 = {4:,}원'.format(name, age, salary, tax_rate, (int)(salary*tax_rate))\n",
         "\n",
         "print(basic_format)\n",
         "print(index_format)\n",
         "print(keyword_format)"
       ],
       "metadata": {
-        "id": "cIvmmcQux_ph"
+        "id": "cIvmmcQux_ph",
+        "outputId": "daa855eb-e7e4-4d5c-d6d1-e628d2ef432e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3,500,000원\n",
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3,500,000원, 세후 월급 = 350,000\n",
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3,500,000원, 세금 = 0.1, 세후 월급 = 350,000원\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -286,21 +430,37 @@
         "\n",
         "# f-문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
+        "basic_format = F'이름 = {name}, 나이 = {age}살,  월급 = {salary:,}원'\n",
         "\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
+        "index_format = F'이름 = {name}, 나이 = {age}살,  월급 = {salary:,}원, 세후 월급 = {(int)(salary*tax_rate) : ,}원'\n",
         "\n",
         "# 직원이름, 나이, 월급, 세금, 실수령액 추력\n",
-        "\n",
+        "keyword_format = F'이름 = {name}, 나이 = {age}살,  월급 = {salary:,}원, 세금 = {tax_rate}, 세후 월급 = {(int)(salary*tax_rate) : ,}원'\n",
         "\n",
         "print(basic_format)\n",
         "print(index_format)\n",
         "print(keyword_format)"
       ],
       "metadata": {
-        "id": "EIO3z-XQx_ce"
+        "id": "EIO3z-XQx_ce",
+        "outputId": "c5d8d150-d173-4b25-c6f5-6a818aa38e7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3,500,000원\n",
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3,500,000원, 세후 월급 =  350,000원\n",
+            "이름 = 홍길동, 나이 = 30살,  월급 = 3,500,000원, 세금 = 0.1, 세후 월급 =  350,000원\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -313,15 +473,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "eFpmQp3QFqlh"
       },
       "outputs": [],
       "source": [
         "# 파일 오픈 & 클로즈\n",
+        "'''\n",
         "file = open('output.txt', 'w')\n",
-        "file.write('Hello, world!\\n')\n"
+        "file.write('Hello, world!\\n')\n",
+        "file.close()\n",
+        "'''\n",
+        "with open('output.txt', 'w') as file : file.write('Hello, world!\\n')"
       ]
     },
     {
