강의영상 4강 실습

--- a/오픈소스_데이터_분석_4강.ipynb
+++ b/오픈소스_데이터_분석_4강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_4%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_4%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,7 +51,7 @@
         "import pandas as pd\n",
         "\n",
         "## data.csv 파일 읽기\n",
-        "\n",
+        "df = pd.read_csv('data.csv', encoding='utf-8', sep=',', header=0, index_col=None, skiprows=None, nrows=None)\n",
         "print(df)"
       ],
       "metadata": {
@@ -77,8 +77,12 @@
         "import pandas as pd\n",
         "\n",
         "## data.json 파일 출력\n",
+        "with open('data.json', mode='r', encoding='utf-8') as f:\n",
+        "    data = json.load(f)\n",
+        "print(data)\n",
         "\n",
         "## data.json 파일 DataFrame 읽기\n",
+        "df = pd.read_json('data.json', orient='records', encoding='utf-8', lines=False)\n",
         "\n",
         "print(df)"
       ],
@@ -106,12 +110,13 @@
         "with open('callcenter20250301.log', 'r', encoding='utf-8') as f:\n",
         "    content = f.read()\n",
         "## 주민등록번호 패턴 생성\n",
-        "\n",
+        "pattern = re.compile(r'(\\d{6})-(\\d{7})')\n",
         "## 주민등록번호 마스킹\n",
-        "\n",
+        "masked_content = pattern.sub(r'\\1-*******', content)\n",
         "\n",
         "## 마스킹된 파일(callcenter20250301_masked.log) 오픈 및 쓰기\n",
-        "\n",
+        "with open('callcenter20250301_masked.log', mode='w') as f:\n",
+        "    f.write(masked_content)\n",
         "\n",
         "print(\"주민등록번호 마스킹 완료. 'callcenter20250301_masked.log.txt' 파일로 저장되었습니다.\")"
       ],
@@ -145,9 +150,10 @@
         "\n",
         "try:\n",
         "    ## URL 및 파라미터 전송\n",
-        "\n",
+        "    response = requests.get(url, params=params)\n",
+        "    response.raise_for_status()\n",
         "    ## JSON 데이터 읽기\n",
-        "\n",
+        "    data = response.json()\n",
         "    print(\"API 응답:\", data)\n",
         "    print(\"서울시 종로구의 현재 온도는 : {0}{1} 입니다.\".format(data['current']['temperature_2m'], data['current_units']['temperature_2m']))\n",
         "\n",
@@ -206,13 +212,18 @@
         "driver = webdriver.Chrome(options=chrome_options)\n",
         "\n",
         "## 사이트 접속\n",
-        "\n",
+        "url = 'https://professor.knou.ac.kr/jaehwachung/index.do'\n",
+        "driver.get(url)\n",
         "\n",
         "## 사이트 접속 대기\n",
-        "\n",
+        "time.sleep(2)\n",
         "\n",
         "## 페이지 제목 출력\n",
+        "page_source = driver.page_source\n",
+        "tree = html.fromstring(page_source)\n",
         "\n",
+        "title_text = tree.xpath('//title/text()')\n",
+        "print(title_text)\n",
         "\n",
         "## 드라이버 종료\n",
         "driver.quit()"
@@ -251,7 +262,8 @@
         "import requests\n",
         "\n",
         "## 데이터 수집 url 및 api key 설정\n",
-        "\n",
+        "url = 'http://apis.data.go.kr/8552584/ArpltnlnforlngireSvc/getCtprvnRltmMesureDns' #무튼 뭐시기 대기오염 정보 요청 주소\n",
+        "api_key = '' #개인 api 키\n",
         "\n",
         "params = {\n",
         "    'serviceKey': api_key,\n",
@@ -263,9 +275,9 @@
         "}\n",
         "\n",
         "## 데이터 수집\n",
-        "\n",
+        "response = requests.get(url, params=params)\n",
         "## 호출 성공/실패 출력\n",
-        "\n"
+        "print(response.json())\n"
       ],
       "metadata": {
         "id": "7yCozmQeXJcO"
