--- a/오픈소스_데이터_분석_5강.ipynb
+++ b/오픈소스_데이터_분석_5강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_5%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_5%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +46,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "import pandas as pd\n",
         "\n",
         "data = {\n",
         "    'student_id': [101, 102, 103, 104, 105],\n",
@@ -56,8 +56,9 @@
         "    'watch_rate': [0.95, 0.87, 0.99, 0.80, 0.93]\n",
         "}\n",
         "## DataFrame 생성\n",
-        "\n",
-        "## CSV 형식 저장\n"
+        "df = pd.DataFrame(data)\n",
+        "## CSV 형식 저장\n",
+        "df.to_csg('student_analysis.csv', encoding='utf-8', index=False)"
       ],
       "metadata": {
         "id": "DztLRI9gW2lk"
@@ -78,7 +79,7 @@
       "cell_type": "code",
       "source": [
         "### 라이브러리 임포트\n",
-        "\n",
+        "import json\n",
         "import pandas as pd\n",
         "\n",
         "data = {\n",
@@ -89,8 +90,12 @@
         "}\n",
         "\n",
         "## json.dump를 이용한 저장\n",
-        "\n",
-        "## DataFrame을 이용한 저장\n"
+        "with open('output.json', mode='w', encoding='utf-8') as f:\n",
+        "    json.dump(data, f, indent=4, ensure_ascii=False)\n",
+        "## DataFrame을 이용한 저장\n",
+        "df = pd.DataFrame([data])\n",
+        "df.to_json('output_df.json', orient='records', indent=4, force_ascii=False)\n",
+        "#df.to_json('output_df.json', orient='columns', indent=4, force_ascii=False)"
       ],
       "metadata": {
         "id": "7bAgRpizW7Vj"
@@ -119,15 +124,17 @@
         "    \"학과\": [\"컴퓨터학\", \"경영학\", \"농학\", \"교육학\", \"영어영문학\"],\n",
         "    \"동아리\": [\"프로그래밍\", \"독서토론\", \"로봇공학\", \"봉사활동\", \"음악감상\"]\n",
         "}\n",
-        "df = pd.DataFrame([data])\n",
+        "df = pd.DataFrame(data)\n",
         "\n",
         "## DataFrame 인덱스 출력\n",
-        "\n",
+        "print(df.index)\n",
         "## DataFrame 컬럼 출력\n",
-        "\n",
+        "print(df.columns)\n",
         "## DataFrame 행 출력\n",
-        "\n",
-        "## DataFrame 값 출력\n"
+        "print(df.values.tolist())\n",
+        "print(df.values)\n",
+        "## DataFrame 값 출력\n",
+        "print(df.values.flatten())"
       ],
       "metadata": {
         "id": "dk3xneVAW9_g"
@@ -159,9 +166,14 @@
         "}\n",
         "\n",
         "## 딕셔너리, csv, json으로 부터 DataFrame 생성\n",
+        "df1 = pd.DataFrame.from_dict(data)\n",
+        "df2 = pd.read_csv('students.csv')\n",
+        "df3 = pd.read_json('students.json')\n",
         "\n",
-        "\n",
-        "## 세가지 방법 결과 비교\n"
+        "## 세가지 방법 결과 비교\n",
+        "print(df1.shape)\n",
+        "print(df2.shape)\n",
+        "print(df3.shape)"
       ],
       "metadata": {
         "id": "ISnPLEgNXAmi"
@@ -192,11 +204,14 @@
         "}\n",
         "\n",
         "## Dataframe 생성\n",
-        "\n",
+        "df1 = pd.DataFrame(data)\n",
         "## CSV, JSON 형식으로 저장\n",
-        "\n",
-        "\n",
-        "## HTML 형식으로 저장\n"
+        "df.to_csv('students_scores.csv')\n",
+        "df.to_json('students_scores.json')\n",
+        "## HTML 형식으로 저장\n",
+        "html_table = df.to_html()\n",
+        "with open('students_scores.html', 'w') as f:\n",
+        "    f.write(html_table)"
       ],
       "metadata": {
         "id": "_dqoWCRoXDrJ"
@@ -243,7 +258,7 @@
         "response = requests.get(url, params=params)\n",
         "\n",
         "## 호출 성공/실패 출력\n",
-        "\n"
+        "print(response.json())\n"
       ],
       "metadata": {
         "id": "7yCozmQeXJcO"
@@ -266,7 +281,12 @@
         "import pandas as pd\n",
         "\n",
         "## requests로부터 response, body, item 항목 읽기\n",
-        "\n"
+        "data = response.json()['response']['body']['items']\n",
+        "print(type(data))\n",
+        "print(len(data))\n",
+        "print(data[0])\n",
+        "df = pd.DataFrame(data)\n",
+        "df['pm25Grade']"
       ],
       "metadata": {
         "id": "HOOo9qTsXLkB"
@@ -286,13 +306,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# CSV 형식 데이터 저장\n",
         "df.to_csv('air_pollution.csv', index=False, encoding='utf-8')\n",
         "\n",
         "## JSON 형식 데이터 저장\n",
-        "\n",
+        "df.to_json('air_pollution.json', indent=4, force_ascii=False)\n",
         "## EXCEL 형식 데이터 저장\n",
-        "\n",
-        "## HTML 형식 데이터 저장\n"
+        "df.to_excel('air_pollution.xlsx', index=False)\n",
+        "## HTML 형식 데이터 저장\n",
+        "df.to_html('air_pollution.html')"
       ],
       "metadata": {
         "id": "HW1ZodpgXNhG"
