--- a/오픈소스_데이터_분석_6강.ipynb
+++ b/오픈소스_데이터_분석_6강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_6%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_6%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -58,14 +58,19 @@
         "df = pd.DataFrame(data)\n",
         "\n",
         "# 데이터 측정\n",
+        "#df.describe()\n",
         "\n",
         "# 모든 데이터 타입 측정\n",
+        "#df.describe(include='all')\n",
         "\n",
         "# 수치형 데이터 측정\n",
+        "#df.describe(include=[np.number])\n",
         "\n",
         "# 범주형 데이터 측정\n",
+        "df.describe(include=['object'])\n",
         "\n",
-        "# 특정 열 분석\n"
+        "# 특정 열 분석\n",
+        "df['score'].describe()"
       ],
       "metadata": {
         "id": "TKsIqpFtYVVS"
@@ -97,10 +102,13 @@
         "df = pd.DataFrame(data)\n",
         "\n",
         "# 특정 열 선택\n",
+        "selected_df = df[['이름', '학과', '학점']]\n",
         "\n",
         "# DataFrame 열순서 변경\n",
+        "reordered_cols = df[['학과', '이름', '학년', '학점', '동아리']]\n",
         "\n",
-        "# DataFrame 열이름 변경\n"
+        "# DataFrame 열이름 변경\n",
+        "df_renamed = df.rename(columns={'이름' : '학생명', '학점' : '평점', '동아리' : '과외활동'})"
       ],
       "metadata": {
         "id": "23DbuKjzYcpS"
@@ -131,12 +139,24 @@
         "}\n",
         "\n",
         "#DataFrame 인덱스 지정\n",
+        "df = pd.DataFrame(data)\n",
+        "df = df.set_index('이름')\n",
         "\n",
         "#DataFrame 행 선택\n",
+        "df.loc['김철수']\n",
+        "df.loc[['김철수', '이영희']]\n",
+        "df.loc['김철수' : '박민수']\n",
         "\n",
         "#DataFrame 위치 기반 행 선택\n",
+        "df.iloc[1]\n",
+        "df.iloc[[2, 3]]\n",
+        "df.iloc[1 : 3]\n",
         "\n",
-        "#DataFrame 조건 기반 선택\n"
+        "#DataFrame 조건 기반 선택\n",
+        "df.loc[[True, False, True, False, False]] #1,3 번째 행\n",
+        "df.loc[df['학점'] >= 4.0]\n",
+        "df[df['학년'] == 2]\n",
+        "df[(df['학년'] == 2) & (df['학점'] >= 3.7)]"
       ],
       "metadata": {
         "id": "Iztna0YTYe_e"
@@ -174,12 +194,17 @@
         "}\n",
         "\n",
         "#DataFrame 인덱스 지정\n",
+        "df = pd.DataFrame(data).set_index('이름')\n",
         "\n",
         "#DataFrame 단일 열 오름차순, 내림차순 정렬\n",
+        "df.sort_values(by='학점') #기본값 오름차순\n",
+        "df.sort_values(by='학점', ascending=False) #내림차순\n",
         "\n",
         "#DataFrame 복수 열 오름차순, 내림차순 정렬\n",
+        "df.sort_values(by=['학년', '학점'], ascending=[True, False])\n",
         "\n",
-        "#DataFrame 인덱스 기분 오른차순, 내림차순 정렬\n"
+        "#DataFrame 인덱스 기분 오른차순, 내림차순 정렬\n",
+        "df.sort_index(ascending=False)"
       ],
       "metadata": {
         "id": "T9G-46ITYx7b"
@@ -219,7 +244,7 @@
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "files.upload()"
+        "files.upload() #다운로드 받은 key json파일 업로드"
       ],
       "metadata": {
         "id": "OlIwjX8vaAF6"
@@ -230,7 +255,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Kaggle API 키 사용을 위한 Colab 환경 설정"
+        "### Kaggle API 키 사용을 위한 Colab 환경 설정 (리눅스 명령어)"
       ],
       "metadata": {
         "id": "V3YAacMY-KAV"
@@ -252,7 +277,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Kaggle 데이터셋 다운로드"
+        "### Kaggle 데이터셋 다운로드 (리눅스 명령어)"
       ],
       "metadata": {
         "id": "Dv2PN16j-ip4"
@@ -286,8 +311,14 @@
         "import pandas as pd\n",
         "\n",
         "# Grocery Sales 데이터 DataFrame 로드\n",
+        "train = pd.read_csv('train.csv')\n",
+        "stores = pd.read_csv('stores.csv')\n",
+        "transactions = pd.read_csv('transactions.csv')\n",
+        "oil = pd.read_csv('oil.csv')\n",
+        "holidays_events = pd.read_csv('holidays_events.csv')\n",
         "\n",
-        "# 판매 데이터 살펴보기\n"
+        "# 판매 데이터 살펴보기\n",
+        "train.info()"
       ],
       "metadata": {
         "id": "QSoBpU9caKQ-"
@@ -308,10 +339,13 @@
       "cell_type": "code",
       "source": [
         "# 판매 데이터 기본 통계량\n",
+        "train.describe()\n",
         "\n",
         "# 매장 데이터 기본 정보\n",
+        "stores.head()\n",
         "\n",
-        "# 원유 가격 데이터 기본 정보\n"
+        "# 원유 가격 데이터 기본 정보\n",
+        "oil.head()"
       ],
       "metadata": {
         "id": "d00dD1V0aNoO"
