--- a/오픈소스_데이터_분석_7강.ipynb
+++ b/오픈소스_데이터_분석_7강.ipynb
@@ -84,7 +84,7 @@
           "height": 206
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +536,7 @@
       "metadata": {
         "id": "oPs_WaNrZD-4"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -648,10 +648,17 @@
         "df_date = pd.DataFrame({'date_str':date_str})\n",
         "\n",
         "### datetime 타입 변환\n",
+        "df_date['date'] = pd.to_datetime(df_date['date_str'])\n",
         "\n",
         "### 날짜 데이터 분리\n",
+        "print(df_date['date'].dt.year)\n",
+        "print(df_date['date'].dt.month)\n",
+        "print(df_date['date'].dt.day)\n",
+        "print(df_date['date'].dt.day_name()) #요일\n",
         "\n",
-        "### 날짜 데이터 포멧 변경\n"
+        "### 날짜 데이터 포멧 변경\n",
+        "df_date['date_formatted'] = df_date['date'].dt.strftime('%Y/%m/%d')\n",
+        "df_date"
       ],
       "metadata": {
         "id": "xDLixmACZ43a"
@@ -725,7 +732,11 @@
       "cell_type": "code",
       "source": [
         "## 판매, 매장, 거래, 원유, 휴일이벤트 데이터 결측치\n",
-        "\n"
+        "print(train.isnull().sum())\n",
+        "print(store.isnull().sum())\n",
+        "print(transactions.isnull().sum())\n",
+        "print(oil.isnull().sum())\n",
+        "print(holidays_events.isnull().sum())"
       ],
       "metadata": {
         "id": "oHN3jYRSaU7A"
@@ -763,7 +774,7 @@
         "oil_cleaned = oil.copy()\n",
         "\n",
         "### 선형 보간법 적용한 원유 가격 데이터\n",
-        "\n",
+        "oil_cleaned['dcoilwtico'] = oil_cleaned['dcoilwtico'].interpolate(method='linear')\n",
         "\n",
         "plt.figure(figsize=(12, 6))\n",
         "plt.plot(oil_cleaned['date'], oil_cleaned['dcoilwtico'], 'b-')\n",
@@ -792,10 +803,18 @@
       "cell_type": "code",
       "source": [
         "### 제품 계열별 판매 데이터 IQR 계산\n",
-        "\n",
+        "family_bounds = train.groupby('family')['sales'].apply(\n",
+        "    lambda x: x.quantile(0.75) + 1.5 * (x.quantile(0.75) - x.quantile(0.25))\n",
+        ")\n",
+        "family_bounds\n",
         "\n",
         "### 상한값 초과 판매량 이상치 분류\n",
+        "train_enhanced = train.copy()\n",
+        "train_enhanced['upper_bound'] = train_enhanced['family'].map(family_bounds)\n",
+        "train_enhanced['is_outlier'] = train_enhanced['sales'] > train_enhanced['upper_bound']\n",
         "\n",
+        "train_outlier = train_enhanced['is_outlier'].sum()\n",
+        "train_ratio = train_enhanced['is_outlier'].mean()\n",
         "\n",
         "print(f\"이상치 개수: {total_outliers:,}건\")\n",
         "print(f\"전체 대비 비율: {total_ratio:.2%}\")\n",
@@ -817,11 +836,9 @@
     {
       "cell_type": "code",
       "source": [
-        "upper_bounds = family_bounds['upper_bound']\n",
-        "\n",
         "### 판매량이 상한값 초과 시, 판매량으로 상한값으로 대체\n",
         "train_cleaned  = train.copy()\n",
-        "\n",
+        "train_cleaned.loc[train_enhanced['is_outlier'], 'sales'] = train_enhanced.loc[train_enhanced['is_outlier'], 'upper_bound']\n",
         "\n",
         "changed_count = (train['sales'] != train_cleaned ['sales']).sum()\n",
         "print(f\"대체된 데이터 수: {changed_count}건\")"
@@ -845,7 +862,10 @@
       "cell_type": "code",
       "source": [
         "### 판매, 거래, 휴일 이벤트, 원율 데이터 내 date 컬럼 데이터 datetime 데이터 타입으로 변경\n",
-        "\n",
+        "train_cleaned['date'] = pd.to_datetime(train_cleaned['date'])\n",
+        "transactions['date'] = pd.to_datetime(transactions['date'])\n",
+        "holidays_events['date'] = pd.to_datetime(holidays_events['date'])\n",
+        "oil_cleaned['date'] = pd.to_datetime(oil_cleaned['date'])\n",
         "\n",
         "\n",
         "train_cleaned['year'] = train_cleaned['date'].dt.year\n",
@@ -853,7 +873,9 @@
         "train_cleaned['day'] = train_cleaned['date'].dt.day\n",
         "train_cleaned['dayofweek'] = train_cleaned['date'].dt.dayofweek\n",
         "### 주말, 월초, 월말 여부 추철\n",
-        "\n",
+        "train_cleaned['weekend'] = train_cleaned['dayofweek'].apply(lambda x: 1 if x >= 5 else 0)\n",
+        "train_cleaned['is_month_start'] = train_cleaned['date'].dt.is_month_start\n",
+        "train_cleaned['is_month_end'] = train_cleaned['date'].dt.is_month_end\n",
         "\n",
         "print(\"날짜 특성 추출 결과:\")\n",
         "print(train_cleaned[['date', 'year', 'month', 'day', 'dayofweek', 'weekend', 'is_month_start', 'is_month_end']].head())"
@@ -868,8 +890,12 @@
       "cell_type": "code",
       "source": [
         "## 요일별 평균 판매량을 계산\n",
+        "day_sales = train_cleaned.groupby('dayofweek')['sales'].mean().reset_index()\n",
         "\n",
         "## 요일 출력값 변경\n",
+        "day_sales['day_name'].map({\n",
+        "    0: '월요일', 1: '화요일', 2: '수요일', 3: '목요일', 4: '금요일', 5: '토요일', 6: '일요일'\n",
+        "})\n",
         "\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.barplot(x='day_name', y='sales', data=day_sales)\n",
@@ -897,13 +923,25 @@
       "cell_type": "code",
       "source": [
         "## 판매, 거래 데이터 통합\n",
-        "\n",
+        "train_with_trans = pd.merge(\n",
+        "    train_cleaned, transactions,\n",
+        "    on=['date', 'store_nbr'],\n",
+        "    how='left'\n",
+        ")\n",
         "\n",
         "## 매장 데이터 통합\n",
-        "\n",
+        "train_with_store = pd.merge(\n",
+        "    train_with_trans, stores,\n",
+        "    on=['store_nbr'],\n",
+        "    how='left'\n",
+        ")\n",
         "\n",
         "## 원유 데이터 통합\n",
-        "\n",
+        "train_final = pd.merge(\n",
+        "    train_with_store, oil_cleaned,\n",
+        "    on='date',\n",
+        "    how='left'\n",
+        ")\n",
         "\n",
         "print(\"최종 데이터셋 정보:\")\n",
         "print(f\"행 개수: {train_final.shape[0]}, 열 개수: {train_final.shape[1]}\")\n",
