10강 강의 실습

--- a/오픈소스_데이터_분석_10강.ipynb
+++ b/오픈소스_데이터_분석_10강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_10%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_10%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -136,8 +136,10 @@
         "    '부서': ['개발팀', '인사팀', '개발팀', '재무팀', '마케팅팀'] }\n",
         "\n",
         "## 딕셔너리를 이용하여 DataFrame 생성\n",
+        "df = pd.DataFrame(data)\n",
         "\n",
-        "## DataFrame 출력"
+        "## DataFrame 출력\n",
+        "print(df)"
       ]
     },
     {
@@ -164,8 +166,10 @@
         "y = [10, 15, 7, 12, 18]\n",
         "\n",
         "## 선 그래프 그리기\n",
+        "plt.plot(x, y)\n",
         "\n",
         "# 제목 설정\n",
+        "plt.title('선 그래프')\n",
         "\n",
         "plt.show()"
       ]
@@ -194,6 +198,7 @@
         "values = [10, 20, 15, 25]\n",
         "\n",
         "## 막대 그래프 그리기\n",
+        "plt.bar(categories, values, width=0.5, color='red')\n",
         "\n",
         "plt.show()"
       ]
@@ -213,6 +218,7 @@
         "values = [10, 20, 15, 25]\n",
         "\n",
         "## 가로 막대 그래프 그리기\n",
+        "plt.barh(categories, values)\n",
         "\n",
         "plt.show()"
       ]
@@ -241,6 +247,7 @@
         "data = np.random.randn(1000)\n",
         "\n",
         "## 히스토그램 그리기\n",
+        "plt.hist(data, bins=30)\n",
         "\n",
         "plt.show()"
       ]
@@ -269,6 +276,7 @@
         "y = [2, 4, 5, 7, 10, 11, 14, 15, 18, 20]\n",
         "\n",
         "## 산점도 그리기\n",
+        "plt.scatter(x, y)\n",
         "\n",
         "plt.show()"
       ]
@@ -296,6 +304,7 @@
         "data = [7, 8, 9, 10, 15, 16, 17, 18, 19, 25, 30, 35, 40]\n",
         "\n",
         "## 박스 플롯 그리기\n",
+        "plt.boxplot(data)\n",
         "\n",
         "plt.show()"
       ]
@@ -324,6 +333,7 @@
         "sizes =[20,30,25,25]\n",
         "\n",
         "## 파이 차트 그리기\n",
+        "plt.pie(sizes, labels=labels, autopct='%1.12%%')\n",
         "\n",
         "plt.title(\"파이 차트\")\n",
         "plt.show()"
@@ -354,6 +364,7 @@
         "data = np.random.rand(5, 5)\n",
         "\n",
         "## seaborn을 이용하여 히트맵 그리기\n",
+        "sns.heatmap(data, annot=True, cmap='coolwarm') # annot 파라미터는 숫자로 표시 여부 True가 숫자\n",
         "\n",
         "plt.title(\"Heatmap\")\n",
         "plt.show()"
@@ -390,8 +401,8 @@
         "angles += angles[:1]\n",
         "\n",
         "## 레이더 차트 생성 (극 좌표계의 라인 그래프)\n",
-        "\n",
-        "\n",
+        "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+        "ax.plot(angles, values)\n",
         "\n",
         "## 축 라벨 및 눈금 설정\n",
         "ax.set_xticks(angles[:-1])\n",
@@ -517,9 +528,11 @@
         "import folium\n",
         "\n",
         "## 지도 생성 (서울 시청 (37.5665, 126.9780) 중심, 확대 레벨 12)\n",
+        "map = folium.Map(location=[37.5665, 126.9780], zoom_start=12)\n",
         "\n",
         "## 마커 추가\n",
         "# 한국방송통신대학교 대학본부 (37.5792, 127.0029)\n",
+        "folium.Marker([37.5792, 127.0029], popup='방송대').add_to(map)\n",
         "\n",
         "## 지도를 HTML 파일로 저장\n",
         "map.save(\"map_visualization.html\")"
@@ -566,6 +579,7 @@
         "G.add_edges_from([(\"A\", \"B\"), (\"A\", \"C\"), (\"B\", \"D\"), (\"C\", \"D\"), (\"C\", \"E\")])\n",
         "\n",
         "## 그래프 시각화\n",
+        "nx.draw(G, with_labels=True, node_size=1000, node_color='lightblue')\n",
         "\n",
         "plt.show()"
       ]
@@ -606,7 +620,7 @@
         "})\n",
         "\n",
         "## seaborn을 이용하여 바이올린 플롯 그리기\n",
-        "\n",
+        "sns.violinplot(x='도시', y='기온(°C)', data=data)\n",
         "\n",
         "## 그래프 제목 및 축 레이블 설정\n",
         "plt.title('2025년 여름 주요 도시 일일 기온 분포', fontsize=14)\n",
@@ -645,7 +659,8 @@
         "Z = np.sin(np.sqrt(X**2 + Y**2))\n",
         "\n",
         "# 등고선 그래프 그리기\n",
-        "\n",
+        "contour = plt.contourf(X, Y, Z, levels=20)\n",
+        "plt.contour(X, Y, Z, colors='black')\n",
         "\n",
         "# 색상 막대 추가 및 레이블 설정\n",
         "cbar = plt.colorbar(contour)\n",
@@ -775,12 +790,14 @@
         "\n",
         "## 월별 총 매출 계산\n",
         "# retail_data_clean을 Year와 Month 단위로 그룹화 한 후 TotalPrice의 합을 구함\n",
+        "monthly_sales = retail_data_clean.groupby(['Year', 'Month'])['TotalPrice'].sum().reset_index()\n",
+        "monthly_sales['YearMonth'] = monthly_sales['Year'].astype(str) + '-' + monthly_sales['Month'].astype(str)\n",
         "\n",
         "# YearMonth 칼럼에 label을 설정\n",
         "monthly_sales['YearMonth'] = monthly_sales['Year'].astype(str) + '-' + monthly_sales['Month'].astype(str)\n",
         "\n",
         "## 월별 총 매출 추이 시각화\n",
-        "\n",
+        "plt.plot(monthly_sales['YearMonth'], monthly_sales['TotalPrice'])\n",
         "\n",
         "## 그래프 제목 및 축 레이블 설정\n",
         "plt.title('월별 총 매출 추이', fontsize=15)\n",
@@ -809,12 +826,13 @@
       "source": [
         "## 국가별 총 매출 계산 및 상위 10개국 추출\n",
         "# retail_data_clean을 Country 단위로 그룹화 한 후 TotalPrice의 합을 구함\n",
+        "country_sales = retail_data_clean.groupby('Country')['TotalPrice'].sum().reset_index()\n",
         "\n",
         "# 역순으로 정렬한 다음 상위 10개 선택\n",
-        "\n",
+        "top_countries = country_sales.sort_values('TotalPrice', ascending=False).head(10)\n",
         "\n",
         "## 국가별 총 매출 시각화 (막대 그래프)\n",
-        "\n",
+        "plt.bar(top_countries['Country'], top_countries['TotalPrice'])\n",
         "\n",
         "## 그래프 제목 및 축 레이블 설정\n",
         "plt.title('국가별 총 매출 (상위 10개국)', fontsize=15)\n",
@@ -845,14 +863,15 @@
         "\n",
         "## 요일 및 시간대별 주문 횟수 계산\n",
         "# 일, 시간으로 그룹화 한 후 횟수(size)를 측정\n",
-        "\n",
+        "hourly_orders = retail_data_clean.groupby(['DayOfWeek', 'Hour']).size().unstack(fill_value=0)\n",
         "\n",
         "## 요일 인덱스 한글명으로 변경\n",
         "day_names = ['월요일', '화요일', '수요일', '목요일', '금요일', '토요일', '일요일']\n",
         "hourly_orders.index = [day_names[i] for i in hourly_orders.index]\n",
         "\n",
         "## 히트맵 시각화\n",
-        "\n",
+        "plt.figure(ffigsize(12, 6))\n",
+        "sns.heatmap(hourly_orders, cmap='Reds', annot=True, fmt='d') # fmt = d 는 정수 표시\n",
         "\n",
         "## 그래프 제목 및 축 레이블 설정\n",
         "plt.title('요일 및 시간대별 주문 횟수', fontsize=15)\n",
