--- a/오픈소스_데이터_분석_11강.ipynb
+++ b/오픈소스_데이터_분석_11강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_11%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_11%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -86,7 +86,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "## 빨간색 선으로 그리기\n",
-        "plt.plot([1,2,3],[2,4,1])\n",
+        "plt.plot([1,2,3],[2,4,1] color='red') #혹은 'r'\n",
         "plt.show()"
       ]
     },
@@ -114,7 +114,7 @@
         "\n",
         "## RGB 및 RGBA 색상 정의 (마지막 값은 투명도)\n",
         "labels = ['Red', 'Green', 'Blue', 'Yellow', 'Cyan (Transparent)']\n",
-        "colors = []\n",
+        "colors = [(1, 0, 0), (0, 1, 0), (0, 0, 1), (1, 1, 0), (0, 1, 1, 0.5)] #RGB, RGBA\n",
         "\n",
         "## 막대 그래프 그리기 (정의된 색상 사용)\n",
         "ax.bar(labels, [5, 7, 6, 4, 8], color=colors)\n",
@@ -195,15 +195,18 @@
         "\n",
         "## 축, 레이블, 제목 설정\n",
         "# x 축 제목 : 월\n",
+        "plt.xlabel('월')\n",
         "\n",
         "# y 축 제목 : 매출(만원)\n",
+        "plt.ylabel('매출(만원)')\n",
         "\n",
         "# y 축 범위 (100 ~ 220)\n",
+        "plt.ylim(100, 220)\n",
         "\n",
         "# 제목 : 2025년 상반기 월별 매출\n",
+        "plt.title('2025년 상반기 월별 매출')\n",
         "\n",
-        "\n",
-        "plt.grid(True)\n",
+        "plt.grid(True) #False\n",
         "plt.show()"
       ]
     },
@@ -234,11 +237,13 @@
         "\n",
         "## 여러 선 그래프 그리기\n",
         "# y1, 마커 : o, 라인 스타일: -, 색: blue\n",
+        "plt.plot(x, y1, market='o', linestyle='-', color='blue')\n",
         "\n",
         "# y2, 마커 : s, 라인 스타일: --, 색: red\n",
+        "plt.plot(x, y1, market='s', linestyle='--', color='red')\n",
         "\n",
         "# y3, 마커 : ^, 라인 스타일: -., 색: green\n",
-        "\n",
+        "plt.plot(x, y1, market='^', linestyle='-.', color='green')\n",
         "\n",
         "## 제목 및 축 레이블 설정\n",
         "plt.title(\"여러 선 그래프 - 마커와 선 스타일 비교\")\n",
@@ -284,6 +289,7 @@
         "plt.ylabel(\"Y축 값\")\n",
         "\n",
         "# 범례 추가\n",
+        "plt.legend()\n",
         "\n",
         "plt.show()"
       ]
@@ -320,6 +326,7 @@
         "\n",
         "# 주석 추가\n",
         "# (2, 2) 위치에 Min Point 주석 추가\n",
+        "plt.annotate('Min Point', xy=(2, 2))\n",
         "\n",
         "## 제목 및 축 레이블 설정\n",
         "plt.title(\"여러 선 그래프 - 마커와 선 스타일 비교\")\n",
@@ -361,6 +368,7 @@
         "# cmap 설정\n",
         "plt.scatter(x, y, c=temperature)\n",
         "# 컬러 바 추가\n",
+        "plt.colorbar()\n",
         "\n",
         "plt.title(\"위치별 온도 분포\")\n",
         "plt.xlabel(\"x 좌표\")\n",
@@ -398,7 +406,7 @@
         "import numpy as np # numpy 임포트 추가\n",
         "\n",
         "## 서브플롯 생성 (2행 2열)\n",
-        "\n",
+        "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
         "\n",
         "## 첫 번째 서브플롯: 선 그래프\n",
         "axes[0, 0].plot([1, 2, 3, 4], [10, 20, 25, 30])\n",
@@ -452,10 +460,14 @@
         "## 3D 그래프 설정\n",
         "fig = plt.figure(figsize=(8, 6))\n",
         "# 3d 프로젝션을 가지는 서브플롯 추가\n",
-        "\n",
+        "ax = fig.add_subplot(111, projection='3d')\n",
+        "# 111 의미 => add_subplot(nrows, ncols, index)\n",
+        "# nrows: 전체 그래프를 몇 행(row) 으로 나눌지\n",
+        "# ncols: 전체 그래프를 몇 열(column) 으로 나눌지\n",
+        "# index: 그 중에서 몇 번째 위치의 서브플롯을 쓸지\n",
         "\n",
         "## 3D 산점도 그리기\n",
-        "\n",
+        "scatter = ax.scatter(x, y, z, c=colors, cmap='viridis')\n",
         "\n",
         "## 축 레이블 및 제목 설정\n",
         "ax.set_xlabel('X 축')\n",
@@ -498,7 +510,7 @@
         "ax = fig.add_subplot(projection='3d')\n",
         "\n",
         "## 3D 표면 그래프 그리기\n",
-        "\n",
+        "surface = ax.plot_surface(X, Y, Z, cmap='viridis')\n",
         "\n",
         "## 축 레이블 및 제목 설정\n",
         "ax.set_xlabel('X 축')\n",
@@ -520,6 +532,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install plotly"
+      ],
+      "metadata": {
+        "id": "VguacMFR2c-Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "TEEMN4zZdoMk"
@@ -535,7 +558,9 @@
         "    'Y값': [10, 14, 18, 24, 30]\n",
         "})\n",
         "\n",
-        "## 인터랙티브 산점도 생성 및 표시\n"
+        "## 인터랙티브 산점도 생성 및 표시\n",
+        "fig = px.scatter(df, x='X값', y='Y값')\n",
+        "fig.show()"
       ]
     },
     {
@@ -730,7 +755,7 @@
         "## 3D 산점도로 RFM 데이터 시각화\n",
         "# x: recency, y: frequency, z: monetary\n",
         "# monetary 값에 따라 색상 변화\n",
-        "\n",
+        "scatter = ax.scatter(rfm['Recency'], rfm['Frequency'], rfm['Monetary'], c=rfm['Monetary'], cmap='viridis')\n",
         "\n",
         "## 각 점에 수직선 추가 (바닥면까지)\n",
         "for i in range(len(rfm)):\n",
@@ -784,7 +809,7 @@
         "## 가격과 판매량의 관계 시각화 (회귀선 포함 산점도)\n",
         "plt.figure(figsize=(12, 8))\n",
         "# seaborn의 regplot을 이용하여 회귀선 포함 산점도를 출력\n",
-        "\n",
+        "sns.regplot(x='UnitPrice', y='Quantity', data=filtered_products)\n",
         "\n",
         "## 그래프 제목 및 축 레이블 설정\n",
         "plt.title('제품 가격과 판매량의 관계', fontsize=15)\n",
@@ -833,7 +858,7 @@
         "## 스택 영역 그래프 시각화\n",
         "plt.figure(figsize=(14, 8))\n",
         "# pivot_data를 이용하여 영역 그래프를 시각화\n",
-        "\n",
+        "pivot_data.plot.area(stacked=True, figsize=(14, 8))\n",
         "\n",
         "## 그래프 제목 및 축 레이블 설정\n",
         "plt.title('월별 및 국가별 매출 추이 (상위 5개국)', fontsize=15)\n",
