강의영상 12강

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_12%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_12%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -152,9 +152,11 @@
         "dataframes = []\n",
         "for filename in all_files:\n",
         "    ## CSV 파일 읽어서 데이터프레임화\n",
+        "    df = pd.read_csv(filename, encoding='cp949')\n",
         "\n",
         "    dataframes.append(df)\n",
         "## 모든 데이터프레임 결합\n",
+        "df = df.concat(dataframes axis=(), ignore_index=True)\n",
         "\n",
         "## 상위 5행 출력\n",
         "df.head(5)"
@@ -173,8 +175,10 @@
       "cell_type": "code",
       "source": [
         "## 수치형 데이터 요약 통계 출력\n",
+        "print(\"수치형 데이터 요약 통계:\\n\", df.describe())\n",
         "\n",
-        "## 범주형 데이터 요약 통계 출력\n"
+        "## 범주형 데이터 요약 통계 출력\n",
+        "print(\"범주형 데이터 요약 통계:\\n\", df.describe(include=['object']))"
       ],
       "metadata": {
         "id": "HyFk8Gry-VpH"
@@ -195,12 +199,16 @@
       "cell_type": "code",
       "source": [
         "## 결측치 제거\n",
+        "df = df.dropna()\n",
         "\n",
         "## '전체_이용_분' 컬럼 값 필터링 (1분 이하, 180분 이상 제거)\n",
+        "df = df[(df['전체_이용_분'] > 1) & (df['전체_이용_분'] < 180)]\n",
         "\n",
         "## '전체_이용_거리' 컬럼 값 필터링 (10M 이하, 10000M 이상 제거)\n",
+        "df = df[(df['전체_이용_거리'] > 10) & (df['전체_이용_거리'] < 10000)]\n",
         "\n",
-        "## '집계_기준' 컬럼 필터링 (출발시간만 사용)\n"
+        "## '집계_기준' 컬럼 필터링 (출발시간만 사용)\n",
+        "df = df[df['집계_기준'] == '출발시간']"
       ],
       "metadata": {
         "id": "fJRGIq2N-XLc"
@@ -221,6 +229,7 @@
       "cell_type": "code",
       "source": [
         "## '기준_날짜' 컬럼 datetime 형식으로 변환 (%Y%m%d)\n",
+        "df['기준_날짜'] = pd.to_datetime(df['기준_날짜'], format='%Y%m%d')\n",
         "\n",
         "## '요일' 컬럼 생성\n",
         "day_mapping = {\n",
@@ -231,7 +240,9 @@
         "    'Friday': '금요일',\n",
         "    'Saturday': '토요일',\n",
         "    'Sunday': '일요일'\n",
-        "}\n"
+        "}\n",
+        "\n",
+        "df['요일'] = df['기준_날짜'].dt.day_name().map(day_mapping)"
       ],
       "metadata": {
         "id": "4UsXZZVa-Zps"
@@ -284,6 +295,7 @@
       "cell_type": "code",
       "source": [
         "## 요일별 이용량 계산 및 정렬\n",
+        "day_df = df['요일'].value_counts().reindex(day_mapping.values())\n",
         "\n",
         "## 요일별 이용량 출력\n",
         "print(\"요일별 이용량:\\n\", day_df)"
@@ -309,6 +321,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "## 요일별 이용량 막대 그래프 생성\n",
+        "plt.bar(day_df.index, day_df.values)\n",
         "\n",
         "plt.title('요일별 이용량')\n",
         "plt.xlabel('요일')\n",
@@ -325,6 +338,8 @@
       "cell_type": "code",
       "source": [
         "## Dataframe의 plot을 이용한 요일별 이용량 막대 그래프 생성\n",
+        "day_df.plot(kind='bar')\n",
+        "plt.title('요일별 이용량')\n",
         "\n",
         "plt.show()"
       ],
@@ -347,8 +362,10 @@
       "cell_type": "code",
       "source": [
         "## '출발_시' 컬럼 생성 (기준_시간대 // 100)\n",
+        "df['출발_시'] = df['기준_시간대'] // 100\n",
         "\n",
         "## 시간별 이용량 계산 및 정렬 (hour_df로 저장)\n",
+        "hour_df = df['출발_시'].value_counts().sort_index()\n",
         "\n",
         "## 시간별 이용량 출력\n",
         "print(\"시간별 이용량:\\n\", hour_df)\n",
@@ -446,6 +463,7 @@
         "## '일시' 컬럼 datetime 형식으로 변환\n",
         "rain_df['일시'] = pd.to_datetime(rain_df['일시'], format='%Y-%m-%d')\n",
         "## '강수량(mm)' 컬럼 결측치 0으로 채우기\n",
+        "rain_df['강수량(mm)'] = rain_df['강수량(mm)'].fillna(0)\n",
         "\n",
         "## 불필요한 컬럼 제거\n",
         "rain_df.drop(columns=['\\t지점번호', 'Unnamed: 6'], inplace=True)"
@@ -469,6 +487,7 @@
       "cell_type": "code",
       "source": [
         "## 일자별 이용량과 강수량 데이터 병합 (daily_usage_gf의 기준_날짜, rain_df의 일시를 기준으로 결합)\n",
+        "merged_df = pd.merge(daily_usage_df, rain_df, how='left', left_on='기준_날짜', right_on='일시')\n",
         "\n",
         "## 'count' 컬럼명 '이용량'으로 변경\n",
         "merged_df.rename(columns={'count': '이용량'}, inplace=True)\n",
@@ -498,9 +517,10 @@
         "ax2 = ax1.twinx() ## 두 번째 y축 생성\n",
         "\n",
         "## 첫 번째 y축에 이용량 막대 그래프 그리기\n",
+        "ax1.bar(merged_df['일시', merged_df['이용량']], color='b', alpha='0.7')\n",
         "\n",
         "## 두 번째 y축에 강수량 꺾은선 그래프 그리기\n",
-        "\n",
+        "ax2.plot(merged_df['일시'], merged_df['강수량(mm)'], color='r')\n",
         "\n",
         "## x축 및 y축 레이블 설정\n",
         "ax1.set_xlabel('날짜')\n",
@@ -538,7 +558,7 @@
         "print(\"강수량과 이용량의 상관계수:\", corr)\n",
         "\n",
         "## 강수량과 이용량의 회귀선 그래프 생성\n",
-        "\n",
+        "ax = sns.regplot(x='강수량(mm)', y='이용량', data=merged_onlyrain_df)\n",
         "\n",
         "## y축 범위 설정\n",
         "plt.ylim(0, merged_onlyrain_df['이용량'].max()*1.1)\n",
@@ -575,6 +595,7 @@
         "merged_onlyrain_df.rename(columns={'강수량(mm)': '강수량_mm'}, inplace=True)\n",
         "\n",
         "## OLS 모델 정의 및 학습\n",
+        "model = smf.ols(formula='이용량 ~ 강수량_mm', data=merged_onlyrain_df)\n",
         "\n",
         "results = model.fit()\n",
         "\n",
