13강 강의영상 실습

--- a/오픈소스_데이터_분석_13강.ipynb
+++ b/오픈소스_데이터_분석_13강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_13%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_13%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -150,16 +150,20 @@
         "## URL로부터 페이지 내용 가져오기\n",
         "def get_page(driver, url):\n",
         "    # url 페이지로 이동\n",
+        "    driver.get(url)\n",
         "\n",
         "    # 해당 페이지의 html을 page_content로 저장\n",
+        "    page_content = drivet.page_source\n",
         "\n",
         "    # page_content를 lxml의 html 객체로 변환하고 tree로 저장\n",
+        "    tree = html.formstring(page_content)\n",
         "\n",
         "    return tree\n",
         "\n",
         "## HTML 트리에서 제목 추출\n",
         "def extract_titles(tree):\n",
         "    ## td-subject를 클래스로 가지는 td 태그 > a태그 > string > text() 을 xpath로 구하고 titles로 저장\n",
+        "    titles = tree.xpath('//td[@class]\"td-subject\"]/a/strong/text()')\n",
         "\n",
         "    return titles\n",
         "\n",
@@ -204,9 +208,11 @@
         "## 다음 페이지로 이동하고 tree 정보 반환\n",
         "def move_to_next_page(driver):\n",
         "    # _listNext 클래스를 기준으로 엘리먼트 선택\n",
+        "    next_page_link = driver.find_element(By.CLASS_NAME, \"listNext\")\n",
         "\n",
         "    if next_page_link and next_page_link.is_enabled():\n",
         "        # 다음 페이지 버튼 클릭\n",
+        "        next_page_link.click()\n",
         "\n",
         "        WebDriverWait(driver, 10).until(\n",
         "            EC.presence_of_element_located((By.CLASS_NAME, \"board-table\"))\n",
@@ -226,9 +232,11 @@
         "          print(f\"=== 페이지 {page} 처리중입니다. ===\")\n",
         "        if page == 1:\n",
         "            # 13-2 에서 작성한 get_page 함수를 이용하여 현재 페이지 tree 구하기\n",
+        "            tree = get_page(driver, url)\n",
         "\n",
         "        else:\n",
         "            # 다음 페이지로 이동하고 해당 페이지 tree 구하기\n",
+        "            tree = move_to_next_page(driver)\n",
         "\n",
         "        if tree is not None:\n",
         "            titles = extract_titles(tree)\n",
@@ -278,10 +286,13 @@
         "def clean_text(text):\n",
         "    if isinstance(text, str):\n",
         "       # 특수 문자 제거 regex (영어 소문자, 영어 대문자, 숫자, 한글, 공백글자만 허용)\n",
+        "       text = re.sub(r'[^a-zA-Z0-9가-힣\\s]', '', text)\n",
         "\n",
         "       # HTML 태그 제거 regex\n",
+        "       text = re.sub(r'<[^>]*>', '', text)\n",
         "\n",
         "       # 소문자로 변환 python 함수\n",
+        "       text = text.lower()\n",
         "\n",
         "       return text\n",
         "    else:\n",
@@ -368,6 +379,7 @@
         "       morphemes = []\n",
         "       for token in result[0][0]:\n",
         "            ## 형태소(form)와 품사(tag) 정보를 튜플로 morphemes에 추가\n",
+        "            morphemes.append((token.from, token.tag))\n",
         "\n",
         "       return morphemes\n",
         "    else:\n",
@@ -377,7 +389,7 @@
         "def pos_df(df):\n",
         "  if not df.empty:\n",
         "      # `정제된 제목` 칼럼의 값에 analyze_morphemes 함수를 적용하고 결과를 `행태소 분석 결과` 칼럼에 저장\n",
-        "\n",
+        "      df['형태소 분석 결과'] = df['정제된 제목'].apply(analyze_morphemes)\n",
         "\n",
         "## 형태소 분석 적용\n",
         "pos_df(cs_df)\n",
@@ -404,6 +416,7 @@
         "## 형태소 분석 결과에서 명사 추출\n",
         "def extract_nouns(morphemes):\n",
         "  # 형태소가 NNG (일반명사), NNP (고유명사) 인 word를 nouns에 저장\n",
+        "  nouns = [word for word, tag in morphemes if tag in ['NNG', 'NNP']]\n",
         "\n",
         "  return nouns\n",
         "\n",
@@ -473,9 +486,10 @@
         "def get_word_count(df):\n",
         "    if not df.empty:\n",
         "        # 모든 명사의 리스트를 구함\n",
+        "        all_nouns = df['명사'].sum()\n",
         "\n",
         "        # 모든 명사들에 대한 Counter 객체(빈도 정보) 를 반환\n",
-        "\n",
+        "        return Counter(all_nouns)\n",
         "\n",
         "## cs_df의 단어 빈도 계산\n",
         "word_count = get_word_count(cs_df)\n",
@@ -526,7 +540,7 @@
         "        background_color='white',\n",
         "        colormap='viridis',\n",
         "        font_path='/usr/share/fonts/truetype/nanum/NanumBarunGothic.ttf' ## 한글 폰트 경로 지정\n",
-        "        ).# word_count의 빈도 정보를 이용하여 생성\n",
+        "        ).generate_from_frequencies(word_count) # word_count의 빈도 정보를 이용하여 생성\n",
         "\n",
         "    plt.figure(figsize=(10, 5))\n",
         "    plt.imshow(wordcloud, interpolation='bilinear') ## 이미지 표시\n",
@@ -655,7 +669,9 @@
         "    ## 프롬프트 형식화 함수\n",
         "    messages = [\n",
         "        # 시스템 메시지 추가\n",
+        "        {\"role\": \"system\", \"content\": \"You are EXAONE model from LG AI Research, a helpful assistant.\"},\n",
         "        # 사용자 메시지 추가\n",
+        "        {\"fole\": \"user\", \"content\": user_input}\n",
         "    ]\n",
         "    return messages\n",
         "\n",
@@ -664,7 +680,7 @@
         "\n",
         "## LLM을 사용하여 텍스트 생성\n",
         "# chat 함수를 이용 (프롬프트와 샘플링 파라미터)\n",
-        "\n",
+        "couputs = llm.chat(prompt, sampling_params)\n",
         "\n",
         "## 생성된 텍스트 출력\n",
         "print(\"\\n생성된 텍스트:\", outputs[0].outputs[0].text)"
