15강 강의 실습

--- a/오픈소스_데이터_분석_15강.ipynb
+++ b/오픈소스_데이터_분석_15강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_15%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jds8282/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_15%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -121,6 +121,7 @@
       "outputs": [],
       "source": [
         "# yfinance 임포트\n",
+        "import yfinan\n",
         "import datetime\n",
         "\n",
         "symbol = 'S&P500'\n",
@@ -131,6 +132,7 @@
         "end_date = datetime.datetime(2019, 12, 31)\n",
         "\n",
         "## yfinance를 사용하여 S&P 500 (^GSPC) 데이터를 지정된 기간 동안 다운로드\n",
+        "df = yf.download(ticker, start=start_date, end=end_date)\n",
         "\n",
         "## MultiIndex 컬럼에서 두 번째 레벨(보통 'Adj Close' 등)을 제거하여 컬럼 이름을 단순화\n",
         "df.columns = df.columns.droplevel(1)\n",
@@ -191,12 +193,13 @@
       "cell_type": "code",
       "source": [
         "## 50일 이동 평균 계산\n",
+        "df['MA50'] = df['Close'].rolling(window=50).mean()\n",
         "\n",
         "## 200일 이동 평균 계산\n",
-        "\n",
+        "df['MA200'] = df['Close'].rolling(window=200).mean()\n",
         "\n",
         "## 일별 수익률 계산\n",
-        "\n",
+        "df['Returns'] = df['Close'].pct_change()\n",
         "\n",
         "## RSI 계산\n",
         "delta = df['Close'].diff()\n",
@@ -273,10 +276,16 @@
         "\n",
         "def make_signal(df):\n",
         "  ## 이동평균선과 RSI를 기반으로 매수/매도 신호를 생성하는 함수\n",
-        "  buy = (  | ## MA 골든 크로스 (현재 시점에서 50일 이동 평균이 200일 이동 평균보다 위에 있다. & 이전 시점에서는 50일 이동 평균이 200일 이동 평균보다 같거나 아래에 있었다.)\n",
+        "  buy = (\n",
+        "      ## MA 골든 크로스 (현재 시점에서 50일 이동 평균이 200일 이동 평균보다 위에 있다. & 이전 시점에서는 50일 이동 평균이 200일 이동 평균보다 같거나 아래에 있었다.)\n",
+        "       (test_df['MA50'] > testdf['MA200']) & (test_df['MA50'].shift(1) <= test_df['MA200'].shift(1)) |\n",
+        "         (test_df['RSI'] > 30) & (test_df['RSI'].shift(1) <= 30)\n",
         "        ) ## RSI 30 상향 돌파\n",
         "\n",
-        "  sell = ( | ## MA 데드 크로스 (현재 시점에서 50일 이동 평균이 200일 이동 평균보다 아래에 있다. & 이전 시점에서는 50일 이동 평균이 200일 이동 평균보다 같거나 위에 있었다.)\n",
+        "  sell = (\n",
+        "      ## MA 데드 크로스 (현재 시점에서 50일 이동 평균이 200일 이동 평균보다 아래에 있다. & 이전 시점에서는 50일 이동 평균이 200일 이동 평균보다 같거나 위에 있었다.)\n",
+        "        (test_df['MA50'] < testdf['MA200']) & (test_df['MA50'].shift(1) >= test_df['MA200'].shift(1)) |\n",
+        "      (test_df['RSI'] < 70) & (test_df['RSI'].shift(1) >= 70)\n",
         "          ) ## RSI 70 하향 돌파\n",
         "\n",
         "  return buy, sell\n",
@@ -348,6 +357,8 @@
         "    ## DataFrame 인덱스로 새로운 'position' DataFrame 생성\n",
         "    position = pd.DataFrame(index=df.index)\n",
         "    ## 매수 시 signal 1, 매도 시 signal 0 할당\n",
+        "    position.loc[buy, 'signal'] = 1\n",
+        "    position.loc[sell, 'signal'] = 0\n",
         "\n",
         "\n",
         "    ## 신호를 하루 뒤로 밀어 포지션 시작 시점 반영\n",
@@ -461,6 +472,7 @@
         "\n",
         "    ## Prophet 형식에 맞게 DataFrame 준비\n",
         "    # prophet은 ds와 y 칼럼 필요. df의 인덱스를 해제하고, Date와 Close 칼럼만 선택한 다음, Date를 ds로, Close를 y로 변환하여 prophet_df로 저장.\n",
+        "    prophet_df = df.reset_index()[['Date', 'Close']].rename(columns={'Date' : 'ds', 'Close': 'y'})\n",
         "\n",
         "    ## Prophet 모델 훈련\n",
         "    model = Prophet()\n",
@@ -589,7 +601,7 @@
       "cell_type": "code",
       "source": [
         "# scikit learn의 ensemble 알고리즘 중 GradientBoostingRegresoor 임포트\n",
-        "\n",
+        "from sklearn.ensemble import GradientBoostingRegressor\n",
         "\n",
         "def expanding_window_forecast_gbrt(train_df, test_df, step_size=30):\n",
         "    ## Gradient Boosting Regressor를 이용한 확장 윈도우 예측 함수\n",
@@ -608,7 +620,7 @@
         "\n",
         "    ## GBRT 모델 초기화\n",
         "    # n_estimators=100, lr=0.1, max_depth=3, random_state=42로 설정\n",
-        "\n",
+        "    model = GredientBoostingRegressor(n_estimators=100, learning_rate=0.1, max_depth=3, random_state=42)\n",
         "\n",
         "    ## 예측 값 저장 칼럼 초기화\n",
         "    test_df['yhat'] = None\n",
